@@ -1,5 +1,6 @@
 0.1.6 (unreleased)
 =====
+* Added branch_and_bound_opt.
 
 0.1.5 (2006-07-25)
 =====
